# openanalytics

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  analytics.js  pyproject.toml
.github/workflows/: deploy.yml  pylint.yml  pytest.yml
contrib/: docker-compose.yml
contrib/openrc/: openanalytics
contrib/systemd/: openanalytics.service
migrations/: env.py
migrations/versions/: 0f9c9604e02a_init.py  832daab8c582_added_stat_model.py  8b4365dc1903_init.py  c1600e8f01bf_added_page_model.py  ef5f15d84a8a_updated_models.py
openanalytics/: auth.py  config.py  database.py  main.py  models.py  routers.py
openanalytics/routes/: api.py
openanalytics/tests/: conftest.py  test_routers.py
openanalytics/tests/routes/: test_api.py
openanalytics/utils/: analytics.py  auth.py  db.py  path.py  scheduler.py  statistics.py
