[build-system]
requires = ["setuptools >= 70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openanalytics"
description = "Open Analytics"
version = "1.0.0"
authors = [
    { name = "Mirai Kumiko", email = "miraikumiko@disroot.org" }
]
maintainers = [
    { name = "Mirai Kumiko", email = "miraikumiko@disroot.org" }
]
keywords = [
    "Analytics"
]
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi==23.1.0",
    "asyncpg==0.30.0",
    "build==1.2.2.post1",
    "databases==0.9.0",
    "httpx==0.28.1",
    "SQLAlchemy==2.0.39",
    "starlette==0.46.1",
    "user-agents==2.2.0",
    "uvicorn==0.34.0"
]
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Source = "https://github.com/miraikumiko/openanalytics"

[project.optional-dependencies]
dev = [
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "pylint==3.3.0"
]

[project.scripts]
openanalytics = "openanalytics.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "openanalytics",
    "openanalytics.*"
]
exclude = [
    "contrib"
]

[tool.pytest.ini_options]
pythonpath = [".", "openanalytics"]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="session"
addopts = [
    "--cov=openanalytics"
]

[tool.pylint]
disable = ["C0114", "C0115", "C0116"]
max-line-length = 200